cabal-version:      3.0
name:               test-certs
version:            0.1.0.0
synopsis:           A terse description of this package
description:
  Expands on the terse description above; here is how to do a link [TmpProc](https://hackage.haskell.org/package/tmp-proc-0.5.3.0/docs/System-TmpProc.html)

  - a fine point
  - an even better one

license:            BSD-3-Clause
license-file:       LICENSE
author:             Tim Emiola
maintainer:         adetokunbo@emio.la
category:           Web
homepage:           https://github.com/adetokunbo/test-certs#readme
bug-reports:
  https://github.com/adetokunbo/test-certs/issues

build-type:         Simple
extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/test-certs.git

library
  exposed-modules:  Test.Certs.Temp
  hs-source-dirs:   src
  build-depends:
    , base                        >=4.10 && <5
    , hspec                       >=2.7.0 && <2.12.0

  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    Certs.TempSpec
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:
    , base
    , hspec           >=2.1
    , QuickCheck
    , test-certs

