cabal-version:      3.0
name:               test-certs
version:            0.1.0.0
synopsis:           A terse description of this package
description:
  Expands on the terse description above; here is how to do a link [TmpProc](https://hackage.haskell.org/package/tmp-proc-0.5.3.0/docs/System-TmpProc.html)
  - a fine point
  - an even better one

license:            BSD-3-Clause
license-file:       LICENSE
author:             Tim Emiola
maintainer:         adetokunbo@emio.la
category:           Web
homepage:           https://github.com/adetokunbo/test-certs#readme
bug-reports:        https://github.com/adetokunbo/test-certs/issues
build-type:         Simple
extra-source-files: ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/test-certs.git

library
  exposed-modules:  Test.Certs.Temp
  hs-source-dirs:   src
  build-depends:
    , asn1-encoding >=0.9 && < 0.11
    , asn1-types    >=0.3 && < 0.3.6
    , base          >=4.10  && <5
    , bytestring    >=0.10.8.2 && <0.11 || >=0.11.3.1 && <0.12.2
    , crypton       >=0.33 && < 0.35
    , crypton-x509  >=1.7 && < 1.9
    , filepath      >=1.4 && < 1.4.3 || >= 1.5.1 && <1.6
    , hourglass     >=0.2.6 && < 0.3
    , pem           >=0.2.4 && < 0.3 
    , temporary     >=1.2 && < 1.5
    , text          >=1.2.3 && <2.2
    , time          >=1.10 && < 1.13
    , HsOpenSSL     >=0.11.7 && < 0.12 

  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    Certs.TempSpec
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
                    -funbox-strict-fields -optc-O3 -optc-ffast-math
  build-depends:
    , base
    , hspec       >=2.1
    , QuickCheck
    , temporary
    , test-certs
    , tls
